--- a/web2.html
+++ b/web2.html
@@ -1,6 +1,18 @@
 <html>
 	<head>
 		<script language="javascript">
+			function validate(){
+				var u=document.f1.t1.value;
+				var p=document.f1.p1.value;
+				if((u=="MVSREC") && (p="IOT"))
+				{
+					WINDOW.ALERT("lOGIN SUCESSFUL");
+				}
+				else
+				{
+					window.alert("LOGIN FAILED");
+				}
+			}
 		</script>
 	</head>
 	<body>
