--- a/web2.html
+++ b/web2.html
@@ -1,36 +1,37 @@
 <html>
 	<head>
-		<script language="javascript">
-			function validate(){
-				var u=document.f1.t1.value;
-				var p=document.f1.p1.value;
-				if((u=="MVSREC") && (p="IOT"))
-				{
-					WINDOW.ALERT("lOGIN SUCESSFUL");
-				}
-				else
-				{
-					window.alert("LOGIN FAILED");
-				}
-			}
-		</script>
-	</head>
-	<body>
-		<form name="f1">
-			<table border="5" bgcolor="pink" align="center">
-				<tr>
-					<td>UserID</td>
-					<td><input type="text" name="t1"></td>
-				</tr>
-				<tr>
-					<td>Password</td>
-					<td><input type="password" name="p1"></td>
-				</tr>
-				<tr>
-					<td><inputtype="button" value="LOGIN" onClick="validate()"></td>
-					<td><input type="reset" value="CLEAR"></td>
-				</tr>
-			</table>
-		</form>
-	</body>
+                <script language="javascript">
+                        function validate(){
+                                var u=document.f1.t1.value;
+                                var p=document.f1.p1.value;
+                                if((u=="MVSREC") && (p=="IOT"))
+                                {
+                                        window.alert("lOGIN SUCESSFUL");
+                                }
+                                else
+                                {
+                                        window.alert("LOGIN FAILED");
+                                }
+                        }
+                </script>
+        </head>
+        <body>
+                <form name="f1">
+                        <table border="5" bgcolor="pink" align="center">
+                                <tr>
+                                        <td>UserID</td>
+                                        <td><input type="text" name="t1"></td>
+                                </tr>
+                                <tr>
+                                        <td>Password</td>
+                                        <td><input type="password" name="p1"></td>
+                                </tr>
+                                <tr>
+                                        <td><input type="button" value="LOGIN" onClick="validate()"></td>
+                                        <td><input type="reset" value="CLEAR"></td>
+                                </tr>
+                        </table>
+                </form>
+        </body>
 </html>
+
